website/deploy/staging/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: snack
  annotations:
    controller.autoneg.dev/neg: '{"backend_services": {"80": [{"name":"snack-staging", "max_rate_per_endpoint":50}]}}'
